@@ -17,6 +17,7 @@
 
 package org.apache.shardingsphere.mcp.feature.readwritesplitting.tool.handler;
 
+import org.apache.shardingsphere.mcp.api.protocol.exception.MCPInvalidRequestException;
 import org.apache.shardingsphere.mcp.api.protocol.response.MCPResponse;
 import org.apache.shardingsphere.mcp.api.tool.MCPToolCall;
 import org.apache.shardingsphere.mcp.feature.readwritesplitting.ReadwriteSplittingFeatureDefinition;
@@ -46,6 +47,7 @@ import java.util.Map;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -62,13 +64,27 @@ class ReadwriteSplittingToolHandlerTest {
         WorkflowContextFixture fixture = createWorkflowContextFixture();
         MCPResponse actual = new PlanReadwriteSplittingRuleToolHandler(planningService).handle(fixture.workflowContext, new MCPToolCall("session-1", Map.of(
                 "database", "logic_db",
-                "structured_intent_evidence", Map.of("rule", "inferred_rule", "read_storage_units", "read_ds_1"),
-                "user_overrides", Map.of("rule", "readwrite_ds"))));
+                "rule", "readwrite_ds",
+                "structured_intent_evidence", Map.of("rule", "inferred_rule", "read_storage_units", "read_ds_1"))));
         assertThat(actual.toPayload().get("plan_id"), is("plan-1"));
         ArgumentCaptor<ReadwriteSplittingRuleWorkflowRequest> requestCaptor = ArgumentCaptor.forClass(ReadwriteSplittingRuleWorkflowRequest.class);
         verify(planningService).plan(eq(fixture.workflowSessionContext), eq(fixture.queryFacade), eq("session-1"), requestCaptor.capture());
         assertThat(requestCaptor.getValue().getRuleName(), is("readwrite_ds"));
         assertThat(requestCaptor.getValue().getReadStorageUnits(), is(List.of("read_ds_1")));
+    }
+    
+    @Test
+    void assertHandlePlanRuleWithTopLevelLoadBalancerProperties() {
+        ReadwriteSplittingRuleWorkflowRequest actual = handlePlanRule(Map.of("database", "logic_db",
+                "load_balancer_properties", Map.of("read_ds_0", "2")));
+        assertThat(actual.getLoadBalancerProperties(), is(Map.of("read_ds_0", "2")));
+    }
+    
+    @Test
+    void assertHandlePlanRuleWithStructuredIntentLoadBalancerProperties() {
+        ReadwriteSplittingRuleWorkflowRequest actual = handlePlanRule(Map.of("database", "logic_db",
+                "structured_intent_evidence", Map.of("load_balancer_properties", Map.of("read_ds_0", "2"))));
+        assertThat(actual.getLoadBalancerProperties(), is(Map.of("read_ds_0", "2")));
     }
     
     @Test
@@ -80,7 +96,7 @@ class ReadwriteSplittingToolHandlerTest {
         Map<String, Object> actualPayload = actual.toPayload();
         assertFalse(actualPayload.containsKey("ddl_artifacts"));
         assertFalse(actualPayload.containsKey("index_plan"));
-        assertTrue(String.valueOf(((Map<?, ?>) ((List<?>) actualPayload.get("distsql_artifacts")).get(0)).get("sql")).contains("CREATE READWRITE_SPLITTING RULE"));
+        assertTrue(String.valueOf(((Map<?, ?>) ((List<?>) actualPayload.get("distsql_artifacts")).getFirst()).get("sql")).contains("CREATE READWRITE_SPLITTING RULE"));
         assertTrue(extractResourceUris((List<?>) actualPayload.get("resources_to_read")).contains("shardingsphere://features/readwrite-splitting/databases/logic_db/rules"));
         assertThat(((Map<?, ?>) actualPayload.get("proxy_topology_hint")).get("expected_runtime_view"), is("proxy_rule_distsql"));
     }
@@ -92,13 +108,31 @@ class ReadwriteSplittingToolHandlerTest {
         WorkflowContextFixture fixture = createWorkflowContextFixture();
         MCPResponse actual = new PlanReadwriteSplittingStatusToolHandler(planningService).handle(fixture.workflowContext, new MCPToolCall("session-1", Map.of(
                 "database", "logic_db",
-                "structured_intent_evidence", Map.of("rule", "readwrite_ds", "storage_unit", "read_ds_0"),
-                "user_overrides", Map.of("target_status", "disable"))));
-        assertThat(actual.toPayload().get("workflow_kind"), is("readwrite.status"));
+                "target_status", "disable",
+                "structured_intent_evidence", Map.of("rule", "readwrite_ds", "storage_unit", "read_ds_0"))));
+        Map<String, Object> actualPayload = actual.toPayload();
+        assertThat(actualPayload.get("workflow_kind"), is("readwrite.status"));
+        Map<?, ?> actualIntentInference = (Map<?, ?>) actualPayload.get("intent_inference");
+        assertFalse(actualIntentInference.containsKey("operation_type"));
+        assertThat(actualIntentInference.get("target_status"), is("disable"));
+        Map<?, ?> actualArgumentProvenance = (Map<?, ?>) actualPayload.get("argument_provenance");
+        assertFalse(actualArgumentProvenance.containsKey("operation_type"));
+        assertThat(actualArgumentProvenance.get("target_status"), is("user_provided"));
+        Map<?, ?> actualDistSQLArtifact = (Map<?, ?>) ((List<?>) actualPayload.get("distsql_artifacts")).getFirst();
+        assertFalse(actualDistSQLArtifact.containsKey("operation_type"));
+        assertThat(actualDistSQLArtifact.get("target_status"), is("disable"));
         ArgumentCaptor<ReadwriteSplittingStatusWorkflowRequest> requestCaptor = ArgumentCaptor.forClass(ReadwriteSplittingStatusWorkflowRequest.class);
         verify(planningService).plan(eq(fixture.workflowSessionContext), eq(fixture.queryFacade), eq("session-1"), requestCaptor.capture());
         assertThat(requestCaptor.getValue().getStorageUnit(), is("read_ds_0"));
         assertThat(requestCaptor.getValue().getTargetStatus(), is("disable"));
+    }
+    
+    @Test
+    void assertHandlePlanStatusRejectsOperationTypeAlias() {
+        MCPInvalidRequestException actual = assertThrows(MCPInvalidRequestException.class,
+                () -> new PlanReadwriteSplittingStatusToolHandler(mock(ReadwriteSplittingStatusWorkflowPlanningService.class)).handle(
+                        createWorkflowContextFixture().workflowContext, new MCPToolCall("session-1", Map.of("operation_type", "disable"))));
+        assertThat(actual.getMessage(), is("operation_type is not supported for readwrite-splitting status. Use target_status instead."));
     }
     
     private WorkflowContextSnapshot createRuleSnapshot() {
@@ -111,11 +145,23 @@ class ReadwriteSplittingToolHandlerTest {
         return result;
     }
     
+    private ReadwriteSplittingRuleWorkflowRequest handlePlanRule(final Map<String, Object> arguments) {
+        ReadwriteSplittingRuleWorkflowPlanningService planningService = mock(ReadwriteSplittingRuleWorkflowPlanningService.class);
+        when(planningService.plan(any(), any(), any(), any())).thenReturn(createRuleSnapshot());
+        WorkflowContextFixture fixture = createWorkflowContextFixture();
+        new PlanReadwriteSplittingRuleToolHandler(planningService).handle(fixture.workflowContext, new MCPToolCall("session-1", arguments));
+        ArgumentCaptor<ReadwriteSplittingRuleWorkflowRequest> requestCaptor = ArgumentCaptor.forClass(ReadwriteSplittingRuleWorkflowRequest.class);
+        verify(planningService).plan(eq(fixture.workflowSessionContext), eq(fixture.queryFacade), eq("session-1"), requestCaptor.capture());
+        return requestCaptor.getValue();
+    }
+    
     private WorkflowContextSnapshot createStatusSnapshot() {
         ReadwriteSplittingStatusWorkflowRequest request = new ReadwriteSplittingStatusWorkflowRequest();
         request.setDatabase("logic_db");
         request.setRuleName("readwrite_ds");
         request.setStorageUnit("read_ds_0");
+        request.setTargetStatus("disable");
+        request.setOperationType("disable");
         WorkflowContextSnapshot result = createSnapshot(request, ReadwriteSplittingFeatureDefinition.STATUS_WORKFLOW_KIND.getValue());
         result.getRuleArtifacts().add(new RuleArtifact("disable", "ALTER READWRITE_SPLITTING RULE readwrite_ds DISABLE read_ds_0 FROM logic_db"));
         return result;
