@@ -23,7 +23,6 @@ import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.client.LLMChatCom
 import org.apache.shardingsphere.test.e2e.mcp.llm.conversation.client.LLMToolCall;
 import org.apache.shardingsphere.test.e2e.mcp.llm.scenario.LLME2EScenario;
 import org.apache.shardingsphere.test.e2e.mcp.support.transport.MCPInteractionActionNames;
-import static org.hamcrest.Matchers.is;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -37,6 +36,7 @@ import java.util.Map;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyMap;
@@ -76,13 +76,12 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
                 createToolCallCompletion("tool-1", "database_gateway_execute_query", executeQueryArguments, "tool-call-response"));
         when(getMCPInteractionClient().call("database_gateway_execute_query", executeQueryArguments)).thenReturn(createResultSetPayload(2));
         when(getLLMChatClient().complete(anyList(), eq(List.of()), eq("none"), eq(true))).thenReturn(
-                new LLMChatCompletion("not-json", List.of(), "invalid-final-response-1"),
-                new LLMChatCompletion("still-not-json", List.of(), "invalid-final-response-2"));
+                new LLMChatCompletion("not-json", List.of(), "invalid-final-response"));
         
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("invalid_final_json"));
-        assertThat(actual.getRawModelOutputs(), is(List.of("tool-call-response", "invalid-final-response-1", "invalid-final-response-2")));
+        assertThat(actual.getRawModelOutputs(), is(List.of("tool-call-response", "invalid-final-response")));
         verify(getMCPInteractionClient()).open();
         verify(getMCPInteractionClient()).close();
     }
@@ -212,7 +211,7 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("invalid_tool_arguments"));
-        assertThat(actual.getInteractionTrace().get(0).getTargetName(), is("database_gateway_execute_query"));
+        assertThat(actual.getInteractionTrace().getFirst().getTargetName(), is("database_gateway_execute_query"));
         verify(getMCPInteractionClient()).open();
         verify(getMCPInteractionClient(), never()).call(anyString(), anyMap());
         verify(getMCPInteractionClient()).close();
@@ -228,7 +227,7 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("invalid_tool_arguments"));
-        assertThat(actual.getInteractionTrace().get(0).getActionKind(), is(MCPInteractionActionNames.RESOURCE_READ_KIND));
+        assertThat(actual.getInteractionTrace().getFirst().getActionKind(), is(MCPInteractionActionNames.RESOURCE_READ_KIND));
         verify(getMCPInteractionClient(), never()).readResource(anyString());
     }
     
@@ -244,7 +243,7 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("unsafe_sql_attempted"));
-        assertThat(actual.getInteractionTrace().get(0).getTargetName(), is("database_gateway_execute_query"));
+        assertThat(actual.getInteractionTrace().getFirst().getTargetName(), is("database_gateway_execute_query"));
         verify(getMCPInteractionClient(), never()).call(anyString(), anyMap());
     }
     
@@ -260,7 +259,7 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("unsafe_sql_execution_attempted"));
-        assertThat(actual.getInteractionTrace().get(0).getTargetName(), is("database_gateway_execute_update"));
+        assertThat(actual.getInteractionTrace().getFirst().getTargetName(), is("database_gateway_execute_update"));
         verify(getMCPInteractionClient(), never()).call(anyString(), anyMap());
     }
     
@@ -274,7 +273,7 @@ class LLMMCPConversationRunnerFailureTest extends AbstractLLMMCPConversationRunn
         LLME2EArtifactBundle actual = actualRunner.run(actualScenario);
         
         assertThat(actual.getAssertionReport().getFailureType(), is("unsafe_workflow_execution_attempted"));
-        assertThat(actual.getInteractionTrace().get(0).getTargetName(), is("database_gateway_apply_workflow"));
+        assertThat(actual.getInteractionTrace().getFirst().getTargetName(), is("database_gateway_apply_workflow"));
         verify(getMCPInteractionClient(), never()).call(anyString(), anyMap());
     }
     
